Fix security issues on dependencies

--- a/src/main/react/src/styles/bootstrap.scss
+++ b/src/main/react/src/styles/bootstrap.scss
@@ -1,6 +1,8 @@
 // -----------------------------------------------------------------------------
 // Bootstrap 3 Overrides
 // -----------------------------------------------------------------------------
+$icon-font-path:                     '../../../../bootstrap-sass/assets/fonts/bootstrap/';
+
 $font-family-base:                   'Roboto', sans-serif;
 
 $body-bg:                             #F4F4F6;
